--- a/hw1/intro_to_autograd.ipynb
+++ b/hw1/intro_to_autograd.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -75,36 +75,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tensor([-1.], requires_grad=True)\n",
-      "tensor([-1.], requires_grad=True)\n",
-      "tensor([-1.], requires_grad=True)\n",
-      "tensor([-1.], requires_grad=True)\n",
-      "tensor([-1.], requires_grad=True)\n",
-      "tensor([-1.], requires_grad=True)\n",
-      "tensor([-1.], requires_grad=True)\n",
-      "tensor([-1.], requires_grad=True)\n",
-      "tensor([-1.], requires_grad=True)\n",
-      "tensor([-1.], requires_grad=True)\n",
-      "tensor([-1.], requires_grad=True)\n",
-      "tensor([-1.], requires_grad=True)\n",
-      "tensor([-1.], requires_grad=True)\n",
-      "tensor([-1.], requires_grad=True)\n",
-      "tensor([-1.], requires_grad=True)\n",
-      "tensor([-1.], requires_grad=True)\n",
-      "tensor([-1.], requires_grad=True)\n",
-      "tensor([-1.], requires_grad=True)\n",
-      "tensor([-1.], requires_grad=True)\n",
-      "tensor([-1.], requires_grad=True)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# for loop for iterative gradient descent\n",
     "for step in range(num_steps):\n",
@@ -112,8 +85,7 @@
     "    x_grad = torch.autograd.grad(f(x), x)[0]\n",
     "    \n",
     "    # gradient descent update. (a -= b) translates to (a = a - b)\n",
-    "    x.data -= step_sz * x_grad\n",
-    "    print(x)"
+    "    x.data -= step_sz * x_grad"
    ]
   },
   {
@@ -147,6 +119,103 @@
     "\n",
     "We will discuss the details more later, but for now feel free to play around with autograd or look into a more detailed explanation [here](https://pytorch.org/tutorials/beginner/blitz/autograd_tutorial.html). The Pytorch tutorial shows you how to do backpropagation using the `.backward()` function instead of `torch.autograd.grad`, but the idea is exactly the same."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2D arrays\n",
+    "\n",
+    "Below is a demo for manipulating 2D variables in Python. The main ideas are very similar to working with arrays in other languages like R or C."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x:  tensor([0., 0.])  g(x):  tensor(25.)\n",
+      "tensor([0., 0.], requires_grad=True)\n",
+      "Gradient:  tensor([-8., -6.])\n",
+      "updated x:  tensor([0.8000, 0.6000], requires_grad=True)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# let's define a function that takes a 2D variable and returns a scalar (like HW 1 Problem 3)\n",
+    "# specifically, we will implement g(x) = (x1 - 4)^2 + (x2 - 3)^2 for 2D x = (x1, x2)\n",
+    "# this is somewhat similar to your homework problem, except you will also need torch.exp\n",
+    "def g(x):\n",
+    "    # you can access elements of a vector using the square brackets\n",
+    "    # for Python, 0 corresponds to the 1st element, 1 corresponds to the 2nd element, etc.\n",
+    "    # Note that the index is different from R, which starts at 1 for the 1st element\n",
+    "    y = (x[0] - 4)**2 + (x[1] - 3)**2\n",
+    "    return y\n",
+    "\n",
+    "# let's define a 2D variable \n",
+    "x_var = torch.tensor([0., 0.])\n",
+    "# now let's evaluate g and print\n",
+    "print('x: ' , x_var, ' g(x): ', g(x_var))\n",
+    "\n",
+    "# now let's get make an autograd variable and get the gradient\n",
+    "x_var = torch.autograd.Variable(x_var, requires_grad=True)\n",
+    "print(x_var)\n",
+    "grad = torch.autograd.grad(g(x_var), x_var)[0]\n",
+    "print('Gradient: ', grad)\n",
+    "# update with step size 0.1\n",
+    "x_var.data = x_var - 0.1 * grad\n",
+    "print('updated x: ', x_var)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Below is an alternate but equivalent definition of g. The definition does element-wise operation before adding up the results. This one requires use of `torch.sum` to add up the elements of `x`. This time you don't need to take array sub-elements."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x:  tensor([0., 0.])  g(x):  tensor(25.)\n",
+      "tensor([0., 0.], requires_grad=True)\n",
+      "Gradient:  tensor([-8., -6.])\n",
+      "updated x:  tensor([0.8000, 0.6000], requires_grad=True)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# specifically, we will implement g(x) = (x1 - 4)^2 + (x2 - 3)^2 for 2D x = (x1, x2)\n",
+    "# this is somewhat similar to your homework problem, except you will also need torch.exp\n",
+    "def g(x):\n",
+    "    # you can also do element-wise operations\n",
+    "    y = torch.sum((x - torch.tensor([4, 3]))**2)\n",
+    "    return y\n",
+    "\n",
+    "# let's define a 2D variable \n",
+    "x_var = torch.tensor([0., 0.])\n",
+    "# now let's evaluate g and print\n",
+    "print('x: ' , x_var, ' g(x): ', g(x_var))\n",
+    "\n",
+    "# now let's get make an autograd variable and get the gradient\n",
+    "x_var = torch.autograd.Variable(x_var, requires_grad=True)\n",
+    "print(x_var)\n",
+    "grad = torch.autograd.grad(g(x_var), x_var)[0]\n",
+    "print('Gradient: ', grad)\n",
+    "# update with step size 0.1\n",
+    "x_var.data = x_var - 0.1 * grad\n",
+    "print('updated x: ', x_var)"
+   ]
   }
  ],
  "metadata": {
@@ -165,7 +234,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
